# handwriting_auth

./: .gitignore  LNN.py  README.md  augmentation.py  jsonTopickle.py  pyproject.toml  visualize.py
Signature/Signature/: ContentView.swift  Item.swift  SignatureApp.swift
Signature/Signature.xcodeproj/: project.pbxproj
Signature/Signature.xcodeproj/project.xcworkspace/xcuserdata/haro.xcuserdatad/: UserInterfaceState.xcuserstate
Signature/Signature/Assets.xcassets/AppIcon.appiconset/: Contents.json
lightning_logs/version_0/: events.out.tfevents.1746591436.haros-MacBook-Air.local.30652.0
lightning_logs/version_0/checkpoints/: epoch=49-step=50.ckpt
lightning_logs/version_1/: events.out.tfevents.1746593633.haros-MacBook-Air.local.32449.0
lightning_logs/version_1/checkpoints/: epoch=49-step=300.ckpt
lightning_logs/version_2/: events.out.tfevents.1746594815.haros-MacBook-Air.local.34830.0
lightning_logs/version_2/checkpoints/: epoch=9-step=60.ckpt
lightning_logs/version_3/: events.out.tfevents.1746595847.haros-MacBook-Air.local.35570.0
lightning_logs/version_3/checkpoints/: epoch=9-step=60.ckpt
